--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.0"
+env_logger = "0.9.0"
 tokio = { version = "1.14", features = ["signal", "macros", "rt-multi-thread"] }
 dotenv = "0.15.0"
 diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
