--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,9 @@ edition = "2021"
 [dependencies]
 log = "0.4.0"
 env_logger = "0.9.0"
-tokio = { version = "1.14", features = ["signal", "macros", "rt-multi-thread"] }
+ctrlc = "3.2.1"
 dotenv = "0.15.0"
 diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 chrono = "0.4"
