--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ env_logger = "0.9.0"
 ctrlc = "3.2.1"
 dotenv = "0.15.0"
 diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
-reqwest = { version = "0.11", features = ["blocking", "json"] }
+ureq = { version = "2.4.0", features = ["json", "charset"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 chrono = "0.4"
