--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ ureq = { version = "2.4.0", features = ["json", "charset"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
+anyhow = "1.0.79"
